--- a/page2.html
+++ b/page2.html
@@ -113,7 +113,7 @@
         </div>
 
         <div class="linkhtml">
-            <a href="./page1.html">Go to previous page</a>
+            <a href="./index.html">Go to previous page</a>
         </div>
     
     </div>
